--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="brand">
           <div class="logo" aria-hidden="true">ST</div>
           <div>
-            <h1 id="login-title">Smart Trọ</h1>         
+            <h1 id="login-title">Smart Trọ</h1>
           </div>
         </div>
 
@@ -23,7 +23,7 @@
               id="identifier"
               name="identifier"
               type="text"
-              inputmode="email"           
+              inputmode="email"
               required
               aria-required="true"
             />
@@ -50,7 +50,37 @@
               id="togglePass"
               aria-label="Hiển thị mật khẩu"
             >
-              Hiện
+              <!-- eye (visible) -->
+              <svg
+                class="icon icon-eye"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                width="18"
+                height="18"
+                aria-hidden="true"
+              >
+                <path fill="none" d="M0 0h24v24H0z" />
+                <path
+                  d="M12 5c-7 0-11 6.5-11 7s4 7 11 7 11-6.5 11-7-4-7-11-7zm0 11a4 4 0 1 1 0-8 4 4 0 0 1 0 8z"
+                  fill="currentColor"
+                />
+                <circle cx="12" cy="12" r="2" fill="currentColor" />
+              </svg>
+              <!-- eye-off (hidden) -->
+              <svg
+                class="icon icon-eye-off hidden"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                width="18"
+                height="18"
+                aria-hidden="true"
+              >
+                <path fill="none" d="M0 0h24v24H0z" />
+                <path
+                  d="M2 2l20 20-1.4 1.4L17 18.8C15.9 19.3 14.5 19.7 12 19.7c-7 0-11-6.5-11-7 1.1-1.6 3.2-4.1 6.6-5.6L3.4 3.4 2 2zm7.5 7.5l2.1 2.1c-.1.3-.1.6 0 .9a3 3 0 0 0 4.2 0c.1-.3.1-.6 0-.9l3.4 3.4C17.7 16.1 14.9 17.7 12 17.7c-3.5 0-6.1-1.6-8.1-3.6.9-1.3 2.5-3 4.6-4.1l1 1zM12 7.3c1.9 0 3.4.9 4.5 2.2l-1.5 1.5A3 3 0 0 0 12 9.3c-.4 0-.7.1-1 .2L8.9 8.1C10.1 7.4 11 7.3 12 7.3z"
+                  fill="currentColor"
+                />
+              </svg>
             </button>
             <div
               id="passwordError"
@@ -97,8 +127,21 @@
         toggle.addEventListener("click", () => {
           const shown = passInput.type === "text";
           passInput.type = shown ? "password" : "text";
-          toggle.textContent = shown ? "Hiện" : "Ẩn";
           toggle.setAttribute("aria-pressed", String(!shown));
+          // swap icons
+          const eye = toggle.querySelector(".icon-eye");
+          const eyeOff = toggle.querySelector(".icon-eye-off");
+          if (eye && eyeOff) {
+            if (shown) {
+              eye.classList.remove("hidden");
+              eyeOff.classList.add("hidden");
+              toggle.setAttribute("aria-label", "Hiển thị mật khẩu");
+            } else {
+              eye.classList.add("hidden");
+              eyeOff.classList.remove("hidden");
+              toggle.setAttribute("aria-label", "Ẩn mật khẩu");
+            }
+          }
         });
 
         function validate() {
