Thêm trang chủchủ

--- a/register.html
+++ b/register.html
@@ -74,7 +74,8 @@
 
             <!-- Login Link -->
             <div class="form-footer">
-                <p>Bạn đã có tài khoản? <a href="index.html" class="link">Đăng nhập</a></p>
+                <p>Bạn đã có tài khoản? <a href="login.html" class="link">Đăng nhập</a></p>
+                <p style="margin-top: 12px;"><a href="home.html" class="link">← Về trang chủ</a></p>
             </div>
         </div>
     </div>
