--- a/login.html
+++ b/login.html
@@ -54,7 +54,7 @@
             <!-- Registration Link -->
             <div class="form-footer">
                 <p>Bạn chưa có tài khoản? <a href="register.html" class="link">Đăng ký ngay</a></p>
-                <p style="margin-top: 12px;"><a href="home.html" class="link">← Về trang chủ</a></p>
+                <p style="margin-top: 12px;"><a href="index.html" class="link">← Về trang chủ</a></p>
             </div>
         </div>
     </div>
