--- a/register.html
+++ b/register.html
@@ -75,7 +75,7 @@
             <!-- Login Link -->
             <div class="form-footer">
                 <p>Bạn đã có tài khoản? <a href="login.html" class="link">Đăng nhập</a></p>
-                <p style="margin-top: 12px;"><a href="home.html" class="link">← Về trang chủ</a></p>
+                <p style="margin-top: 12px;"><a href="index.html" class="link">← Về trang chủ</a></p>
             </div>
         </div>
     </div>
@@ -113,7 +113,7 @@
             
             setTimeout(() => {
                 alert('Đăng ký thành công! Chuyển đến trang đăng nhập...');
-                window.location.href = 'index.html';
+                window.location.href = 'login.html';
             }, 1500);
         });
 
