Chỉnh sửa đăng ký, đăng nhậpnhập

--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
                 <nav class="nav">
                     <ul class="nav-list">
                         <li><a href="index.html" class="nav-link active">Trang chủ</a></li>
-                        <li><a href="#" class="nav-link">Nhà cho thuê</a></li>
-                        <li><a href="#" class="nav-link">Liên hệ</a></li>
-                        <li><a href="#" class="nav-link">Người cho thuê</a></li>
+                        <li><a href="rent.html" class="nav-link">Nhà cho thuê</a></li>
+                        <li><a href="contact.html" class="nav-link">Liên hệ</a></li>
                     </ul>
                 </nav>
 
