--- a/rent.html
+++ b/rent.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RoomStay - Hệ thống quản lý phòng trọ</title>
+    <title>Nhà cho thuê - RoomStay</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="rent.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -17,14 +18,16 @@
             <div class="header-content">
                 <!-- Logo -->
                 <div class="logo">
-                    <h1>RoomStay</h1>
+                    <a href="home.html">
+                        <h1>RoomStay</h1>
+                    </a>
                 </div>
 
                 <!-- Navigation -->
                 <nav class="nav">
                     <ul class="nav-list">
-                        <li><a href="index.html" class="nav-link active">Trang chủ</a></li>
-                        <li><a href="rent.html" class="nav-link">Nhà cho thuê</a></li>
+                        <li><a href="home.html" class="nav-link">Trang chủ</a></li>
+                        <li><a href="rent.html" class="nav-link active">Nhà cho thuê</a></li>
                         <li><a href="contact.html" class="nav-link">Liên hệ</a></li>
                     </ul>
                 </nav>
@@ -77,46 +80,61 @@
         <section class="hero-banner">
             <div class="banner-container">
                 <div class="banner-content">
-                    <h2 class="banner-title">Banner Quản Lý Phòng Trọ</h2>
+                    <h2 class="banner-title">Nhà cho thuê</h2>
                 </div>
             </div>
         </section>
 
-        <!-- Features Section -->
+        <!-- Properties Section -->
         <section class="features">
             <div class="features-container">
                 <div class="features-grid">
-                    <!-- Feature Card 1 -->
+                    <!-- Property Card 1 -->
                     <div class="feature-card">
-                        <div class="card-icon">
-                            <i class="fas fa-cogs"></i>
+                        <div class="card-icon" style="background: #f97316;">
+                            <i class="fas fa-home"></i>
                         </div>
-                        <h3 class="card-title">Quản lý tiện lợi</h3>
+                        <h3 class="card-title">Phòng Trọ 1</h3>
+                        <h4 style="color: var(--text-primary); margin-bottom: var(--space-sm);">Phòng trọ Quận 1 - Giá tốt</h4>
                         <p class="card-description">
-                            Dễ dàng quản lý hợp đồng, hóa đơn và thông tin phòng trọ của bạn.
+                            Địa chỉ: 123 Đường Nguyễn Trãi, Quận 1, TP.HCM<br>
+                            <strong style="color: var(--primary-blue);">3.500.000 VNĐ/tháng</strong><br>
+                            Số phòng: 1<br>
+                            Liên hệ: 0912-345-678
                         </p>
+                        <button class="btn btn-primary" style="margin-top: var(--space-md);">Liên hệ ngay</button>
                     </div>
 
-                    <!-- Feature Card 2 -->
+                    <!-- Property Card 2 -->
                     <div class="feature-card">
-                        <div class="card-icon">
-                            <i class="fas fa-search"></i>
+                        <div class="card-icon" style="background: #3b82f6;">
+                            <i class="fas fa-building"></i>
                         </div>
-                        <h3 class="card-title">Tìm kiếm thông minh</h3>
+                        <h3 class="card-title">Phòng Trọ 2</h3>
+                        <h4 style="color: var(--text-primary); margin-bottom: var(--space-sm);">Căn hộ mini thoáng mát</h4>
                         <p class="card-description">
-                            Bộ lọc mạnh mẽ giúp bạn tìm kiếm phòng trọ phù hợp với mọi tiêu chí.
+                            Địa chỉ: 456 Đường Lê Lợi, Quận 2, TP.HCM<br>
+                            <strong style="color: var(--primary-blue);">5.000.000 VNĐ/tháng</strong><br>
+                            Số phòng: 1<br>
+                            Liên hệ: 0987-654-321
                         </p>
+                        <button class="btn btn-primary" style="margin-top: var(--space-md);">Liên hệ ngay</button>
                     </div>
 
-                    <!-- Feature Card 3 -->
+                    <!-- Property Card 3 -->
                     <div class="feature-card">
-                        <div class="card-icon">
-                            <i class="fas fa-comments"></i>
+                        <div class="card-icon" style="background: #10b981;">
+                            <i class="fas fa-university"></i>
                         </div>
-                        <h3 class="card-title">Kết nối nhanh chóng</h3>
+                        <h3 class="card-title">Phòng Trọ 3</h3>
+                        <h4 style="color: var(--text-primary); margin-bottom: var(--space-sm);">Phòng trọ gần đại học</h4>
                         <p class="card-description">
-                            Liên hệ trực tiếp với người cho thuê và đặt lịch hẹn xem phòng nhanh chóng.
+                            Địa chỉ: 789 Đường 3/2, Quận 10, TP.HCM<br>
+                            <strong style="color: var(--primary-blue);">2.800.000 VNĐ/tháng</strong><br>
+                            Số phòng: 1<br>
+                            Liên hệ: 0901-234-567
                         </p>
+                        <button class="btn btn-primary" style="margin-top: var(--space-md);">Liên hệ ngay</button>
                     </div>
                 </div>
             </div>
@@ -134,7 +152,7 @@
     <div class="language-button">
         <button class="lang-btn" id="languageButton">
             <i class="fas fa-language"></i>
-            <span>A</span>
+            <span>A A</span>
         </button>
     </div>
 
@@ -151,38 +169,21 @@
         // FAB functionality
         const fabButton = document.getElementById('fabButton');
         fabButton.addEventListener('click', function() {
-            // Add your FAB action here
-            alert('Floating Action Button clicked!');
+            alert('Tính năng thêm nhà cho thuê sẽ được phát triển!');
         });
 
         // Language button functionality
         const languageButton = document.getElementById('languageButton');
         languageButton.addEventListener('click', function() {
-            // Add language switching functionality here
-            alert('Language/Accessibility options');
+            alert('Tính năng trợ năng sẽ được phát triển!');
         });
 
-        // Smooth scrolling for navigation links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                if (target) {
-                    target.scrollIntoView({
-                        behavior: 'smooth',
-                        block: 'start'
-                    });
-                }
-            });
-        });
-
-        // Add scroll effect to header
-        window.addEventListener('scroll', function() {
-            const header = document.querySelector('.header');
-            if (window.scrollY > 100) {
-                header.classList.add('scrolled');
-            } else {
-                header.classList.remove('scrolled');
+        // Contact button functionality
+        document.querySelectorAll('.btn-primary').forEach(btn => {
+            if (btn.textContent.includes('Liên hệ ngay')) {
+                btn.addEventListener('click', function() {
+                    alert('Tính năng liên hệ sẽ được phát triển!');
+                });
             }
         });
 
@@ -284,22 +285,20 @@
                     alert('Đăng xuất thành công!');
                 }
             }
-
-            // Method to set user info after login
-            setUserInfo(token, userInfo) {
-                this.token = token;
-                this.user = userInfo;
-                localStorage.setItem('authToken', token);
-                localStorage.setItem('userInfo', JSON.stringify(userInfo));
-                this.updateAuthUI();
-            }
         }
 
         // Initialize auth manager
         const authManager = new AuthManager();
 
-        // Make authManager globally available for other pages
-        window.authManager = authManager;
+        // Add scroll effect to header
+        window.addEventListener('scroll', function() {
+            const header = document.querySelector('.header');
+            if (window.scrollY > 100) {
+                header.classList.add('scrolled');
+            } else {
+                header.classList.remove('scrolled');
+            }
+        });
     </script>
 </body>
 </html>
