--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,11 @@
                 <nav class="nav">
                     <ul class="nav-list">
                         <li><a href="home.html" class="nav-link">Trang chủ</a></li>
-                        <li><a href="rent.html" class="nav-link">Nhà cho thuê</a></li>
                         <li><a href="contact.html" class="nav-link active">Liên hệ</a></li>
+                        <li><button class="nav-link search-btn" id="searchBtn">
+                            <i class="fas fa-search"></i>
+                            Tìm kiếm
+                        </button></li>
                     </ul>
                 </nav>
 
@@ -52,7 +55,7 @@
                                 <div class="user-dropdown" id="userDropdown">
                                     <a href="profile.html" class="dropdown-item">
                                         <i class="fas fa-user"></i>
-                                        Hồ sơ cá nhân
+                                        Tài khoản
                                     </a>
                                     <a href="#" class="dropdown-item" id="logoutBtn">
                                         <i class="fas fa-sign-out-alt"></i>
