--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
                 <nav class="nav">
                     <ul class="nav-list">
                         <li><a href="index.html" class="nav-link active">Trang chủ</a></li>
-                        <li><a href="rent.html" class="nav-link">Nhà cho thuê</a></li>
                         <li><a href="contact.html" class="nav-link">Liên hệ</a></li>
+                        <li><button class="nav-link search-btn" id="searchBtn">
+                            <i class="fas fa-search"></i>
+                            Tìm kiếm
+                        </button></li>
                     </ul>
                 </nav>
 
